Fixed cards on mobile

--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -368,7 +368,8 @@ body {
 
     @media (max-width: 576px) {
       gap: 12px;
-      padding-right: 32px;
+      min-width: 295px;
+      padding-right: 24px;
       justify-content: left;
     }
 
@@ -408,15 +409,22 @@ body {
 
     .product-card__line-break {
       display: initial;
-      margin-right: 4px;
-
       @media (max-width: 992px) {
         display: block;
+        font-size: 10px;
+      }
+
+      @media (max-width: 576px) {
+        margin-right: 4px;
       }
     }
 
     .product-card__button {
       margin-top: initial;
+
+      @media (max-width: 576px) {
+        width: 39px;
+      }
     }
   }
 
@@ -436,6 +444,11 @@ body {
 
     @media (max-width: 992px) {
       width: 100px;
+    }
+
+    @media (max-width: 576px) {
+      width: 84px;
+      height: 39px;
     }
   }
 
@@ -457,6 +470,10 @@ body {
   &__show-review {
     color: $mineShaft;
     text-decoration: underline;
+
+    @media (max-width: 576px) {
+      font-size: 13px;
+    }
   }
 
   &__sale-offer {
